#2636 comment: Magazine series update time:1

--- a/front-mag.html
+++ b/front-mag.html
@@ -11,7 +11,7 @@ title: Front page
                 <img alt="" src="http://gfx.dagbladet.no/labrador/268/268661/26866122/jpg/active/646x270.jpg">
                 <header>
                     <h1 class="title"> Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
-                    <p class="lead">Temperamentet er en styrke, mener Tom Nordlie.</p>
+                    <p class="lead">Temperamentet er en styrke, mener Tom Nordlie. Vi har spurt spillerne hva de tenker.</p>
                 </header>       
                 </a>
                                                             
@@ -43,7 +43,7 @@ title: Front page
         <div class="large-4 columns">
                 <article class="">
                     <a href="story-n.html">
-                    <img alt="" class="image-round" src="http://gfx.dagbladet.no/labrador/268/268636/26863655/jpg/active/646x270.jpg">
+                    <img src="http://gfx.dagbladet.no/labrador/268/268636/26863655/jpg/active/646x270.jpg">
                     <header>
                         <h1 class="title">- Jeg må innrømme at Sammer var litt for tysk for meg</h1>
                         <p class="lead">Den tyske mesterhjernen får æren for at tysk fotball har reist seg.</p>
@@ -128,51 +128,55 @@ title: Front page
     </header>
     <div class="row">
         <div class="large-4 columns">
-            <a href="/pluss/spesial/foreldreskolen">
+            <a href="#">
             </a><article class="series-promo"><a href="#">
-                <img src="http://gfx.dagbladet.no/pluss/spesial/foreldreskolen/foreldreskolen.jpg" alt="">
+                <img class="image-round" src="http://cdn.thedailybeast.com/content/newsweek/2013/06/05/modern-art-s-last-gasp-at-the-2013-venice-biennale/jcr:content/thumbnail.crop.206.206.jpg/1370425844916.cached.jpg" alt="">
                 </a>
                 <header><a href="/pluss/spesial/foreldreskolen">
                     <h1 class="">Foreldreskolen</h1>
                     <p class="">Hver uke i Magasinet tar Håvard Tjora opp problemstillinger rundt oppdragelse.</p>
-                    <hr>
+                    <hr class="hr-thick">
                     </a>
-                    <p><a href="#" class="button secondary small round">Les spesialen</a></p>
                 </header>
-                <footer>
-                    <p class="m-special-front--counter"><strong>20</strong> artikler</p>
+                <footer class="center">
+                    <a href="#" class="button secondary small round">Les spesialen</a>
+                    <p class="muted"><strong>20</strong> artikler</p>
                 </footer>
             </article>
         </div>  
         <div class="large-4 columns">
             <a href="#"></a>
             <article class="series-promo">
-                <a href="/pluss/spesial/pensjonsskolen">
-                <img src="http://gfx.dagbladet.no/pluss/spesial/pensjonsskolen/pensjonsskolen.jpeg" alt="">
+                <a href="#">
+                <img class="image-round" src="http://cdn.thedailybeast.com/content/newsweek/2013/06/05/is-blackberry-s-q10-the-last-keypad-phone-for-research-in-motion/jcr:content/thumbnail.crop.315.315.jpg/1370425582038.cached.jpg" alt="">
                 </a><header><a href="#">
                     <h1 class="">Pensjonsskolen</h1>
                     <p class="">Vet du hva du får i pensjon? Vet du hvilke grep du bør ta - og hvilke feller du bør unngå - for å sikre økonomien som pensjonist? Dagbladets Pensjonsskole har alle svarene - og de gode rådene.</p>
-                    <hr>
-                    </a><p><a href="" class="button secondary small round">Les spesialen</a></p>
+                    <hr class="hr-thick">
+                    </a>
                 </header>
-                <footer>
-                    <p class=""><strong>18</strong> artikler</p>
+                <footer class="center">
+                    <a href="#" class="button secondary small round">Les spesialen</a>
+                    <p class="muted"><strong>20</strong> artikler</p>
                 </footer>
             </article>  
         </div>
 
         <div class="large-4 columns">
-            <a href="/pluss/spesial/bokettersynet">
-            </a><article class="series-promo"><a href="/pluss/spesial/bokettersynet">
-                <img src="http://gfx.dagbladet.no/pluss/spesial/bokettersynet/bokhylle.jpg" alt="">
-                </a><header><a href="/pluss/spesial/bokettersynet">
+            <a href="#">
+            </a>
+            <article class="series-promo">
+                <a href="#">
+                <img class="image-round" src="http://cdn.thedailybeast.com/content/newsweek/2013/05/29/blue-is-the-warmest-color-a-steamy-romance-at-cannes/jcr:content/thumbnail.crop.315.315.jpg/1369819977791.cached.jpg" alt="">
+                </a><header><a href="#">
                     <h1 class="">Bokettersynet</h1>
                     <p class="">Bli med hjem og se i bokhylla til kjente nordmenn. Bøkene avslører skjulte sider ved de som eier dem.</p>
-                    <hr>
-                    </a><p><a href="#"></a><a href="#" class="button secondary small round">Les spesialen</a></p>
+                    <hr class="hr-thick">
+                    </a>
                 </header>
-                <footer>
-                    <p class="m-special-front--counter"><strong>9</strong> artikler</p>
+                <footer class="center">
+                    <a href="#" class="button secondary small round">Les spesialen</a>
+                    <p class="muted"><strong>5</strong> artikler</p>
                 </footer>
             </article> 
         </div>
