#2636 comment: Hero full width styling  time:0.5

--- a/front-mag.html
+++ b/front-mag.html
@@ -183,27 +183,27 @@ title: Front page
     </div>
 </section>
 
+<section class="portrait has-background stick-to-footer">
+    <div style="background-image: url(http://cdn.thedailybeast.com/content/newsweek/2013/05/22/issue/jcr:content/issue/cover/image.full.1280.1024.jpg/1369845942544.cached.jpg"); height: 704px;" class="hero">
+        <div class="overlay center">
+                <div class="row">
+                    <div class="large-12 offset-4 columns">
 
-<!-- <section class="portrait has-background">
+                        <h2 class="divider">
+                            Fokus
+                        </h2>
+                        <article class="article-portrait">
+                            <h1 class="title">
+                                <a href="story-n.html">Verdensbefolkning øker dobbelt så fort som vi trodde</a>
+                            </h1>
+                            <p class="lead">
+                                <a href="story-n.html">Dette endrer alt, sier forsker</a>
+                            </p>
+                        </article>
 
-    <div class="background-image">
-        <img src="http://gfx.dagbladet.no/labrador/268/268661/26866122/jpg/active/1956x818.jpg" /> 
-    </div>
-
-    <div class="overlay">
-            <div class="row">
-                <div class="large-12 columns">
-
-                    <h2>
-                        Portrettet
-                    </h2>
-                    <article class="article-portrait">
-                        <h1 class="title"><a href="story-n.html">- Jeg har egentlig ikke vært meg selv på tre-fire år</a></h1>
-                        <p class="lead"><a href="story-n.html">Temperamentet er en styrke, mener Tom Nordlie.</a></p>
-                    </article>
-
+                    </div>
                 </div>
             </div>
-        </div>
-    </div> 
-</section> -->
+        
+    </div>
+</section>
