#2636 fix url path for css image

--- a/front-mag.html
+++ b/front-mag.html
@@ -184,7 +184,7 @@ title: Front page
 </section>
 
 <section class="portrait has-background stick-to-footer">
-    <div style="background-image: url(http://cdn.thedailybeast.com/content/newsweek/2013/05/22/issue/jcr:content/issue/cover/image.full.1280.1024.jpg/1369845942544.cached.jpg"); height: 704px;" class="hero">
+    <div style="background-image: url(&quot;http://cdn.thedailybeast.com/content/newsweek/2013/05/22/issue/jcr:content/issue/cover/image.full.1280.1024.jpg/1369845942544.cached.jpg&quot;); height: 704px;" class="hero">
         <div class="overlay center">
                 <div class="row">
                     <div class="large-12 offset-4 columns">
