--- a/front-mag.html
+++ b/front-mag.html
@@ -139,7 +139,7 @@ title: Front page
                     </a>
                 </header>
                 <footer class="center">
-                    <a href="#" class="button secondary small round">Les spesialen</a>
+                    <a href="#" class="btn-simple">Les serien</a>
                     <p class="muted"><strong>20</strong> artikler</p>
                 </footer>
             </article>
@@ -156,7 +156,7 @@ title: Front page
                     </a>
                 </header>
                 <footer class="center">
-                    <a href="#" class="button secondary small round">Les spesialen</a>
+                    <a href="#" class="btn-simple">Les serien</a>
                     <p class="muted"><strong>20</strong> artikler</p>
                 </footer>
             </article>  
@@ -175,7 +175,7 @@ title: Front page
                     </a>
                 </header>
                 <footer class="center">
-                    <a href="#" class="button secondary small round">Les spesialen</a>
+                    <a href="#" class="btn-simple">Les serien</a>
                     <p class="muted"><strong>5</strong> artikler</p>
                 </footer>
             </article> 
