--- a/front-mag.html
+++ b/front-mag.html
@@ -187,9 +187,9 @@ title: Front page
     <div style="background-image: url(&quot;http://cdn.thedailybeast.com/content/newsweek/2013/05/22/issue/jcr:content/issue/cover/image.full.1280.1024.jpg/1369845942544.cached.jpg&quot;); height: 704px;" class="hero">
         <div class="overlay center">
                 <div class="row">
-                    <div class="large-12 offset-4 columns">
+                    <div class="large-6 large-centered columns">
 
-                        <h2 class="divider">
+                        <h2 class="hero-label">
                             Fokus
                         </h2>
                         <article class="article-portrait">
@@ -198,7 +198,9 @@ title: Front page
                             </h1>
                             <p class="lead">
                                 <a href="story-n.html">Dette endrer alt, sier forsker</a>
+                                
                             </p>
+                            <a href="#" class="btn-simple light">Les mer</a>
                         </article>
 
                     </div>
