Made separate mag layout and updated search

--- a/front-mag.html
+++ b/front-mag.html
@@ -1,5 +1,5 @@
 ---
-layout: zurb
+layout: mag
 title: Front page
 ---
 <section class="top">
@@ -21,7 +21,7 @@ title: Front page
 </section>
 
 <section class="most-popular front-section article-grid">
-    <header class="center divider">
+    <header class="center">
         <h2 class="section-heading">Rampelys</h2>
         <!-- <span>Det du vil ha</span> -->
     </header>
