--- a/search.html
+++ b/search.html
@@ -1,5 +1,5 @@
 ---
-layout: zurb
+layout: mag
 title: Search
 ---
 <header class="object-header row">
@@ -32,5 +32,5 @@ title: Search
 {% include serp.html %}
 {% include serp.html %}
 <div class="load-more center">
-  <a href="#" class="button">Se flere ...</a>
+  <a href="#" class="btn-simple">Se flere treff</a>
 </div>
