headers now in each html file

--- a/buy.html
+++ b/buy.html
@@ -29,7 +29,8 @@
 
       <div class="container">
 
-        <div class="main">
+        <div class="main row">
+          <div class="span12"
 
           <hr>
 
@@ -60,6 +61,7 @@
 
           </div>
 
+          </div> <!-- span -->
         </div>
 
       </div> <!-- /container -->
