--- a/search.html
+++ b/search.html
@@ -2,6 +2,14 @@
 layout: mag
 title: Search
 ---
+<header class="section-header">
+    <div class="row">
+      <div class="large-12 columns">
+        <h1><a href="front-mag.html">Søk</a></h1>
+      </div>
+    </div>
+</header>
+
 <header class="object-header row">
   <div class="small-12 columns">
     <form autocomplete="off" id="search-page-form" class="search-page-form">
