--- a/story-n.html
+++ b/story-n.html
@@ -2,6 +2,14 @@
 layout: mag
 title: News article
 ---
+<header class="section-header">
+    <div class="row">
+      <div class="large-12 columns">
+        <h1><a href="front-mag.html">Fokus</a></h1>
+      </div>
+    </div>
+</header>
+
 <div class="row article-wrapper">
     <div class="large-12 columns">
         <article itemtype="http://schema.org/Article" role="main" class="article">
