--- a/front-mag.html
+++ b/front-mag.html
@@ -2,6 +2,14 @@
 layout: mag
 title: Front page
 ---
+<header class="section-header">
+    <div class="row">
+      <div class="large-12 columns">
+        <h1><a href="front-mag.html">Forside</a></h1>
+      </div>
+    </div>
+</header>
+  
 <section class="top">
 <!-- <h2 class="center"><span>Mest populært på NewsFront</span></h2> -->
     <div class="row ">
@@ -91,10 +99,9 @@ title: Front page
         <div class="large-4 columns">
             <article class="">
                 <a href="story-n.html">
-                <img alt="" src="http://gfx.dagbladet.no/labrador/268/268272/26827233/jpg/active/646x270.jpg">
                 <header>
-                    <h1 class="title">Husarbeid og barnepass er ikke kulturutveksling</h1>
-                    <p class="lead">Det kan være et moderne slaveri, skriver Marie Simonsen.</p>
+                    <h1 class="title">Husarbeid og barnepass er ikke kulturutveksling når det er påtvunget, sier eliten</h1>
+                    <p class="lead">Det kan være et moderne slaveri, og ingen er uskyldige her, skriver Allerotte Simonsen.</p>
                 </header>       
                 </a>
                                   
