grid style 2 done. button tweaks. misc.

--- a/search.html
+++ b/search.html
@@ -40,5 +40,5 @@ title: Search
 {% include serp.html %}
 {% include serp.html %}
 <div class="load-more center">
-  <a href="#" class="btn-simple">Se flere treff</a>
+  <a href="#" class="btn-simple soft">Se flere treff</a>
 </div>
