--- a/front-mag.html
+++ b/front-mag.html
@@ -44,6 +44,21 @@ title: Front page
     {% include article-grid.html %}
 </section>
 
+<section class="front-section article-grid-small">
+    <header class="center">
+        <h2 class="section-heading">Grid small</h2>
+        <!-- <span>Det du vil ha</span> -->
+    </header>
+    <div class="row">
+        <div class="large-6 columns">
+            {% include article-grid-small.html %}
+        </div>
+        <div class="large-6 columns">
+            {% include article-grid-small.html %}
+        </div>
+    </div>
+</section>
+
 <section class="front-section">
     <div class="row">
         <div class="large-4 columns">
