aside heading, hero etc

--- a/leder-n.html
+++ b/leder-n.html
@@ -62,7 +62,7 @@ title: Meninger article
                 </div>
 
                 <div class="large-4 columns">
-                    <h2 class=" section-heading">Meninger</h2>
+                    <h3 class="aside-heading">Meninger</h3>
                     {% include article-title-list.html %}
                 </div>
             </div>
