better front page article lists

--- a/front-mag.html
+++ b/front-mag.html
@@ -79,4 +79,14 @@ title: Front page
 
 {% include series-section.html %}
 
+<section class="row frontpage-section">
+    <div class="small-12 columns">
+        <header class="center divider">
+            <h2 class="section-heading">Simple list</h2>
+            <span>Newsfront gir deg det siste</span>
+        </header>
+        {% include article-title-list-2.html %}
+    </div>
+</section>
+
 {% include hero-section-footer.html %}
