misc content updates, i think

--- a/leder-n.html
+++ b/leder-n.html
@@ -112,6 +112,7 @@ title: Meninger article
 
 <div class="row">
     <div class="small-12 columns">
+        <h3 class="aside-heading">Les mer</h3>
         {% include article-title-list-2.html %}
     </div>
 
