Added FitVid (not working, might be Zepto issue)

--- a/story-n.html
+++ b/story-n.html
@@ -91,15 +91,15 @@ title: News article
 
                         <p>TIPH skulle være en midlertidig misjon for å redde Oslo-prosessen etter massakren mot palestinere i Hebron i 1994.</p>
 
-                       <!--  <figure class="inline-media offset video" data-mediatype="video" data-mediaprovider="vimeo">
-                            <div class="video-wrapper">
+                       <figure class="inline-media offset video" data-mediatype="video" data-mediaprovider="vimeo">
+                            <div class="video-wrapper" id="video-wrapper">
                                 <iframe class="vimeo" src="http://player.vimeo.com/video/67159381?title=0&amp;byline=0&amp;portrait=0" frameborder="0" width="300" height="200" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
                             </div>
                             <figcaption class="caption">
                                 <span class="credit">Vimeo / Per</span>
                                 <p>The past two decades have seen a proliferation of hacking movies—some pure fantasy and others a bit too close to home.</p>
                              </figcaption>
-                        </figure> -->
+                        </figure>
 
                         <p>Noen av de tidligere observatørene går langt i å antyde at det har gått prestisje for Norge i å opprettholde TIPHs tilstedeværelse på en mer permanent basis.</p>
 
