Mobile ads basics and some desktop ads

--- a/story-n.html
+++ b/story-n.html
@@ -38,9 +38,9 @@ title: News article
                     <a href="#">Del med andre</a>
                 </div>
             </div>
-
-            {% include ad-mobile.html %}
-
+            <div class="ad-inline">
+                {% include ad-mobile.html %}
+            </div>
             <div class="row">
                 <div class="large-8 columns">
                     <div class="body-content">
@@ -178,6 +178,8 @@ title: News article
         </article>
     </div>
 </div>
+
+{% include ad-mobile.html %}
 
 {% include ad-mobile.html %}
 
