Better ads classes

--- a/front-mag.html
+++ b/front-mag.html
@@ -10,6 +10,8 @@ title: Front page
     </div>
 </header>
 
+{% include ad-desktop-1.html %}
+
 <section class="main-story frontpage-section">
 <!-- <h2 class="center"><span>Mest populært på NewsFront</span></h2> -->
     <div class="row ">
@@ -78,6 +80,8 @@ title: Front page
 </section>
 
 {% include series-section.html %}
+
+{% include ad-desktop-1.html %}
 
 <section class="row frontpage-section">
     <div class="small-12 columns">
