Adding sidebar ads with absolute pos

--- a/front-mag.html
+++ b/front-mag.html
@@ -12,6 +12,8 @@ title: Front page
 
 {% include ad-desktop-1.html %}
 
+{% include ad-desktop-sidebar.html %}
+
 <section class="main-story frontpage-section">
 <!-- <h2 class="center"><span>Mest populært på NewsFront</span></h2> -->
     <div class="row ">
