--- a/story-n.html
+++ b/story-n.html
@@ -22,6 +22,8 @@ title: News article
                     </figcaption>
                 </figure>
 
+                {% include ad-desktop-sidebar.html %}
+
                 <div class="lead" itemprop="description">
                     <p>TIPHs mandat er for svakt, noe som underbygges av mangelen på resultater og derved liten bedring av situasjonen for palestinerne, sier Jan Kristensen, tidligere Head of Mission for de internasjonale observatørene i Hebron.</p>
                 </div>
