link fix front page

--- a/front-mag.html
+++ b/front-mag.html
@@ -19,7 +19,7 @@ title: Front page
     <div class="row ">
         <div class="large-12 columns">
             <article class="">
-                <a href="buy.html">
+                <a href="story-n.html">
                 <img alt="" src="http://gfx.dagbladet.no/labrador/268/268661/26866122/jpg/active/646x270.jpg">
                 <header>
                     <h1 class="title"> Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
