--- a/search.html
+++ b/search.html
@@ -9,6 +9,17 @@ title: Search
       </div>
     </div>
 </header>
+<!-- <br>
+<br>
+<div id="sb-search" class="sb-search">
+            <form>
+              <input class="sb-search-input" placeholder="Enter your search term..." type="text" value="" name="search" id="search">
+              <input class="sb-search-submit" type="submit" value="">
+              <span class="sb-icon-search"></span>
+            </form>
+          </div>
+<br>
+<br> -->
 
 <header class="object-header row">
   <div class="small-12 columns">
