#3437 Cleanup zurb template

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
-
     <body>
 
       <div class="navbar navbar-inverse navbar-fixed-top">
@@ -48,5 +47,25 @@
         </div>
       </div>
 
+      <div class="container">
+        <hr>
+        <ul>
+          <li><a href="/buy.html">Buy</a></li>
+          <li><a href="/front-mag.html">Magazine frontpage</a></li>
+          <li><a href="/leder-n.html">Leder</a></li>
+          <li><a href="/local.html">Local</a></li>
+          <li><a href="/menu.html">Menu</a></li>
+          <li><a href="/news-n.html">News</a></li>
+          <li><a href="/news-old.html">News Old</a></li>
+          <li><a href="/search.html">Search</a></li>
+          <li><a href="/section-ledere.html">Section ledere</a></li>
+          <li><a href="/section-mag.html">Section Mag</a></li>
+          <li><a href="/static.html">Static</a></li>
+          <li><a href="/story-b.html">Story B</a></li>
+          <li><a href="/story-local.html">Story local</a></li>
+          <li><a href="/story-n.html">Story N</a></li>
+          <li><a href="/tl-menu.html">TL menu</a></li>
+        </ul>
+      </div>
   </body>
   </html>
