#3437 Smacssify hero unit for footer

--- a/front-mag.html
+++ b/front-mag.html
@@ -2,12 +2,11 @@
 layout: mag
 title: Front page
 ---
+
 <header class="section-header">
-    <div class="row">
-      <div class="large-12 columns">
-        <h1><a href="front-mag.html">Forside</a></h1>
-      </div>
-    </div>
+  <div class="l-row">
+    <h1><a href="front-mag.html">Forside</a></h1>
+  </div>
 </header>
 
 {% include ad-desktop-1.html %}
@@ -24,9 +23,9 @@ title: Front page
                 <header>
                     <h1 class="title"> Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
                     <p class="lead">Temperamentet er en styrke, mener Tom Nordlie. Vi har spurt spillerne hva de tenker.</p>
-                </header>       
+                </header>
                 </a>
-                                                            
+
             </article>
         </div>
     </div>
