--- a/search.html
+++ b/search.html
@@ -59,5 +59,5 @@ title: Search
 
 
 <div class="load-more center" style="display: none;">
-  <a href="javascript:void(0);" onclick="solrShowMore();" class="btn-simple soft">Se flere treff</a>
+  <a href="javascript:void(0);" onclick="nfSolr.showMore();" class="btn-simple soft">Se flere treff</a>
 </div>
