#3437 Series module html + css

--- a/front-mag.html
+++ b/front-mag.html
@@ -83,7 +83,7 @@ title: Front page
 
 {% include ad-desktop-1.html %}
 
-<section class="l-container">
+<section class="l-container front-section">
   <div class="l-row">
     <header class="section--header center">
       <h2 class="title">Simple list</h2>
