--- a/index.html
+++ b/index.html
@@ -1,50 +1,100 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Newsfront Demo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
+---
+layout: mag
+title: Front page
+---
 
-  <!-- Le styles -->
-  <link href="./css/bootstrap.min.css" rel="stylesheet">
-  <link href="./css/bootstrap-responsive.min.css" rel="stylesheet">
-  <link href="./css/newsbaby.css" rel="stylesheet">
+<header class="section-header">
+  <div class="l-row">
+  <h1><a href="/">Forside</a></h1>
+  </div>
+</header>
 
-  <!-- Fav and touch icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-  <link rel="shortcut icon" href="../assets/ico/favicon.png">
+{% include ad-desktop-1.html %}
 
-  <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-  <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-</head>
-    <body>
+{% include ad-desktop-sidebar.html %}
 
-      <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-inner">
-          <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </a>
-            <a class="visible-phone mobile-logo" href="#"><img src="img/assets/logo-varingen-mobile.gif" width="85" /></a>
-            <div class="nav-collapse collapse">
-              <ul class="nav">
-                <li class=""><a href="#"><i class="icon-user"></i> Nothing</a></li>
-                <li><a href="#">To</a></li>
-                <li><a href="#">See</a></li>
-                <li><a href="#">Here</a></li>
-              </ul>
-            </div><!--/.nav-collapse -->
-          </div>
-        </div>
-      </div>
-  </body>
-  </html>
+<section class="main-story frontpage-section">
+  <div class="row ">
+    <div class="large-12 columns">
+      <article class="">
+        <a href="/story/">
+        <img alt="" src="http://gfx.dagbladet.no/labrador/268/268661/26866122/jpg/active/646x270.jpg">
+        <header>
+          <h1 class="title"> Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
+          <p class="lead">Temperamentet er en styrke, mener Tom Nordlie. Vi har spurt spillerne hva de tenker.</p>
+        </header>
+        </a>
+
+      </article>
+    </div>
+  </div>
+</section>
+
+<section class="most-popular front-section article-grid grid-style-1">
+  <header class="center">
+    <h2 class="section-heading">Grid 1</h2>
+    <!-- <span>Det du vil ha</span> -->
+  </header>
+  {% include article-grid.html %}
+</section>
+
+<section class="front-section article-grid grid-style-2">
+  <header class="center">
+    <h2 class="section-heading">Grid 2</h2>
+    <!-- <span>Det du vil ha</span> -->
+  </header>
+  {% include article-grid.html %}
+</section>
+
+<section class="article--list-small l-container front-section">
+  <header class="section--header center">
+    <h2 class="title">Grid small</h2>
+  </header>
+
+  <div class="l-row">
+    <div class="grid-6">
+      {% include article-grid-small.html %}
+    </div>
+
+    <div class="grid-6">
+      {% include article-grid-small.html %}
+    </div>
+  </div>
+</section>
+
+<section class="l-container front-section">
+  <h2 hidden>Articles</h2>
+  <div class="l-row">
+    <section class="grid-4">
+      <h2 class="title">Siste</h2>
+      {% include article-title-list.html %}
+    </section>
+
+    <section class="grid-4">
+      <h2 class="title">Ledere</h2>
+      {% include article-title-list.html %}
+    </section>
+
+    <section class="grid-4">
+      <h2 class="title">Mest delt</h2>
+      {% include article-title-list.html %}
+    </section>
+  </div>
+</section>
+
+{% include series-section.html %}
+
+{% include ad-desktop-1.html %}
+
+<section class="l-container front-section">
+  <header class="section--header center">
+    <h2 class="title">Simple list</h2>
+    <span>Newsfront gir deg det siste</span>
+  </header>
+
+  <div class="l-row">
+    {% include article-title-list-2.html %}
+  </div>
+</section>
+
+{% include hero-section-footer.html %}
