Loading ads with media-aware javascript

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@ title: Front page
   </div>
 </header>
 
-{% include ad-desktop-1.html %}
+<div class="row nf-desktop-ad"></div>
+<!-- include ad-desktop-1.html -->
 
-{% include ad-desktop-sidebar.html %}
+<div class="row nf-desktop-ad-sidebar"></div>
+<!-- include ad-desktop-sidebar.html -->
 
 <section class="main-story frontpage-section">
   <div class="row ">
@@ -84,7 +86,8 @@ title: Front page
 
 {% include series-section.html %}
 
-{% include ad-desktop-1.html %}
+<div class="row nf-desktop-ad"></div>
+<!-- include ad-desktop-1.html -->
 
 <section class="l-container front-section">
   <header class="section--header center">
