Updated ad files path

--- a/meninger/leder/index.html
+++ b/meninger/leder/index.html
@@ -10,6 +10,8 @@ title: Meninger article
     </div>
 </header>
 
+<div class="row nf-desktop-ad"></div>
+
 <div class="row article-wrapper">
     <div class="large-12 columns">
         <article itemtype="http://schema.org/Article" role="main" class="article">
@@ -32,7 +34,7 @@ title: Meninger article
                 </div>
             </div>
 
-            {% include ad-mobile.html %}
+            <div class="nf-mobile-ad"></div>
 
             <div class="row">
                 <div class="large-8 columns">
@@ -103,12 +105,12 @@ title: Meninger article
                     <h6><a href="#">- Nå må verden få opp øynene for hva tekstilindustrien gjør med folk</a></h6>
                     <h6><a href="#">- Nå må verden få opp øynene for hva tekstilindustrien gjør med folk</a></h6> -->
                 </div>
-            </div>        
+            </div>
         </article>
     </div>
 </div>
 
-{% include ad-mobile.html %}
+<div class="nf-mobile-ad"></div>
 
 <div class="row">
     <div class="small-12 columns">
@@ -117,4 +119,5 @@ title: Meninger article
     </div>
 
 </div>
+
 {% include related.html %}
